完成拾色器明度调节

--- a/main.html
+++ b/main.html
@@ -82,8 +82,7 @@
                     </div>
                 </div>
                 <div id="color_picker">
-                    <div class="color-picker-white"></div>
-                    <div class="color-picker-black"></div>
+                    <div class="color-picker-fg"></div>
                 </div>
             </div>
             <div class="setting-title">图层管理</div>
