--- a/main.html
+++ b/main.html
@@ -20,7 +20,8 @@
                     <li><a href="javascript:;">新建</a></li>
                     <li class="line"><a href="javascript:;">打开</a></li>
                     <li><a href="javascript:;">保存</a></li>
-                    <li><a href="javascript:;">导出</a></li>
+                    <li class="line"><a href="javascript:;">导出</a></li>
+                    <li><a href="javascript:;">关闭</a></li>
                 </ul>
             </li>
             <li>
