--- a/main.html
+++ b/main.html
@@ -83,7 +83,7 @@
             <div class="container">
                 <div class="pure-g">
                     <div class="pure-u-1-4">
-                        <div id="color_panel"></div>
+                        <div class="color-panel"></div>
                     </div>
                     <div class="pure-u-3-4">
                         <table class="table color-slider" id="color_maker">
@@ -210,15 +210,15 @@ $(document).ready(function(){
     /*绘图主程序*/
     //const file = '{"cuteType":1,"width":3,"height":4,"layers":[{"name":"绘图层","display":true,"opacity":1,"mode":1,"cubes":[0,0,0,[255,109,28],1,1,0,[255,228,28],0,0,0,0]},{"name":"背景层","display":true,"opacity":1,"mode":1,"cubes":[[255,255,255],1,1,1,1,1,1,1,1,1,1,1]}]}';
     const painter = new Painter($('#cube_group'));
-    painter.newFile('未命名', 1, 32, 20, '#FFFFFF');
+    painter.newFile('未命名', 1, 32, 20, '#ffffff');
     painter.render();
     //painter.load(file);
     //painter.render();
     /*调色器*/
-    const colorMaker = new ColorMaker($('#color_maker'), $('#color_panel'));
-    colorMaker.setColor(250, 68, 0);
+    const colorPanel = new ColorPanel($('#color_maker'), $('#color_picker'));
+    colorPanel.setColor('#fa6800');
     /*拾色器*/
-    const colorPicker = new ColorPicker($('#color_picker'), colorMaker);
+    //const colorPicker = new ColorPicker($('#color_picker'), colorMaker);
 });
 </script>
 </html>
