--- a/main.html
+++ b/main.html
@@ -60,8 +60,9 @@
         </div>
         <div class="canvas">
             <div class="container">
-                <div id="cube_group" style="display: inline-block;"></div>
-                <a href="javascript:;" class="checked" title="隐藏网格" style="left:20px;top:20px;"><img src="images/ic-net.png" /></a>
+                <div id="cube_group"></div>
+                <label>w:32 h:32 scale:1</label>
+                <a href="javascript:;" title="隐藏网格" style="left:20px;top:40px;"><img src="images/ic-net.png" /></a>
                 <a href="javascript:;" title="放大" style="left:20px;top:112px;"><img src="images/ic-z-out.png" /></a>
                 <a href="javascript:;" title="缩小" style="left:20px;top:158px;"><img src="images/ic-z-in.png" /></a>
 
@@ -197,9 +198,6 @@ $(document).ready(function(){
     /*页面窗口*/
     let cavansWdith = $('body').width() - $('.toolbox').width() - $('.setting').width();
     $('.canvas').width(cavansWdith);
-    $('body').on('dragstart', function(){
-        return false;
-    });
     /*绘图主程序*/
     const painter = new Painter($('#cube_group'));
     /*颜色面板*/
@@ -212,8 +210,10 @@ $(document).ready(function(){
     painter.layerManager = layerPanel;
 
     painter.colorManager.setColor('#fa6800');
-    painter.newFile('未命名', 64, 32, '#ffffff');
-    painter.scale = 0;
+    painter.newFile('未命名', 32, 32, '#ffffff');
+    painter.scale = 2;
+    //painter.showGrid = false;
+    painter.setTool('pen');
     painter.render();
 });
 </script>
