实现选区算法

--- a/main.html
+++ b/main.html
@@ -62,7 +62,7 @@
             <div class="container">
                 <div id="cube_group"></div>
                 <label>w:32 h:32 scale:1</label>
-                <a href="javascript:;" title="隐藏网格" style="left:20px;top:40px;"><img src="images/ic-net.png" /></a>
+                <a href="javascript:;" title="网格" style="left:20px;top:40px;"><img src="images/ic-net.png" /></a>
                 <a href="javascript:;" title="放大" style="left:20px;top:112px;"><img src="images/ic-z-out.png" /></a>
                 <a href="javascript:;" title="缩小" style="left:20px;top:158px;"><img src="images/ic-z-in.png" /></a>
 
