完成移动工具

--- a/main.html
+++ b/main.html
@@ -249,13 +249,12 @@ $(document).ready(function(){
         painter.newFile(name, width, height, '#'+color);
         $(this).parents('.modal').hide();
     });
-    /*
+    
     painter.colorManager.setColor('#fa6800');
-    painter.newFile('未命名', 128, 128, '#ffffff');
-    painter.scale = 0;
-    //painter.showGrid = false;
+    painter.newFile('未命名', 16, 16, '#ffffff');
+    painter.scale = 2;
     painter.setTool('pen');
-    painter.render();*/
+    painter.render();
 });
 </script>
 </html>
