修改页面文字

--- a/main.html
+++ b/main.html
@@ -49,12 +49,12 @@
             <div class="container">
                 <a href="javascript:;" class="tools" data-val="pen" title="画笔"><img src="images/ic-pen.png"></a>
                 <a href="javascript:;" class="tools" data-val="clear" title="清除"><img src="images/ic-eraser.png"></a>
-                <a href="javascript:;" class="tools" data-val="move" title="移动"><img src="images/ic-move.png"></a>
+                <a href="javascript:;" class="tools" data-val="move" title="移动（按住Alt复制）"><img src="images/ic-move.png"></a>
                 <a href="javascript:;" class="tools" data-val="select" title="选区"><img src="images/ic-area.png"></a>
                 <a href="javascript:;" class="tools" data-val="magic" title="魔棒"><img src="images/ic-magic.png"></a>
                 <a href="javascript:;" class="tools" data-val="pick" title="拾色"><img src="images/ic-pick.png"></a>
                 <a href="javascript:;" class="tools" data-val="fill" title="填充"><img src="images/ic-fill.png"></a>
-                <a href="javascript:;" class="tools" data-val="cut" title="裁剪"><img src="images/ic-cutpic.png"></a>
+                <a href="javascript:;" class="tools" data-val="cut" title="裁剪（按Enter执行）"><img src="images/ic-cutpic.png"></a>
                 <a href="javascript:;" class="tools" data-val="insert" title="插入图片"><img src="images/ic-album.png"></a>
             </div>
         </div>
